<?xml version="1.0" encoding="utf-8"?>
<game.eretseir.online.CreateNewGame xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/double_border_opaque"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/returnImageButton"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/single_border_white"
        android:contentDescription="@string/returnString"
        android:src="@drawable/back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="40dp"
        android:text="@string/enterCoolName"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/editTextSingleBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="username"
        android:digits="אבגדהוזחטיכלמנסעפצקרשתךםןףץ1234567890-_"
        android:hint="@string/enterNameHint"
        android:imeOptions="flagNoFullscreen"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:minWidth="140sp"
        android:paddingHorizontal="36sp"
        android:paddingVertical="8sp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <RelativeLayout
        android:id="@+id/maxPlayersLayout"
        android:layout_width="wrap_content"
        android:layout_height="28sp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText">

        <TextView
            android:id="@+id/maxPlayersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxPlayers"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <gal.libs.betterradiogroup.BetterRadioGroup
            android:id="@+id/maxPlayersRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_toEndOf="@+id/maxPlayersTextView" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/roundsAmountLayout"
        android:layout_width="wrap_content"
        android:layout_height="28sp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPlayersLayout">

        <TextView
            android:id="@+id/roundsAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamesAmount"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <gal.libs.betterradiogroup.BetterRadioGroup
            android:id="@+id/roundsAmountRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_toEndOf="@+id/roundsAmountTextView"/>

    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        style="@style/buttonSingleBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:clickable="false"
        android:paddingHorizontal="40sp"
        android:paddingVertical="5sp"
        android:text="@string/start"
        android:textSize="18sp"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundsAmountLayout" />


    <ProgressBar
        android:id="@+id/startProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:indeterminateTint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/startButton"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="@+id/startButton" />

</game.eretseir.online.CreateNewGame>